Crashfix: closing and reopening popup palette

BUG:443402