libs/ui/kis_popup_palette.h
@@ -183,7 +183,7 @@ Q_SIGNALS:
     void sigChangefGColor(const KoColor&);
     void sigUpdateCanvas();
     void zoomLevelChanged(int);
-    void finished(); // KisPopupWidgetInterface.
+    void finished() override; // KisPopupWidgetInterface.
 
 public Q_SLOTS:
     void slotUpdateIcons();
